# paranoid-system

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  TODO  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: workflow.yml
src/: common.rs  env.rs  lib.rs  log.rs  totp.rs  tpm.rs
src/boot/: ima.rs  mod.rs  tests.rs
src/server/: dto.rs  launcher.rs  mod.rs
src/server/db/: mod.rs
src/server/db/entities/: attestation_nonce.rs  attestation_session.rs  baseline.rs  clients.rs  mod.rs  poweron.rs  prelude.rs  push_session.rs  secured_payload.rs  server_log.rs
src/server/db/migration/sqlite/: 20250803_01.schema.sql
systemd/: paranoid-boot.service
tests/: paranoid-system.sh
