[package]
name = "paranoid-system"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"

# No workspace-based project structure, just signle crate, in signle repo.

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.43", features = ["derive"] }
config = { version = "0.15.13", features = ["toml"] }
file-rotate = "0.8.0"
flate2 = "1.1.2"
futures-util = "0.3.31"
glob = "0.3.2"
hex = "0.4.3"
hyper = { version = "1.6.0" }
hyper-util = "0.1.16"
jsonwebtoken = "9.3.1"
log = "0.4.27"
nix = { version = "0.30.1", features = ["fs", "user"] }
openssl = { version = "0.10.73", features = ["vendored"] }
picky-asn1-der = "0.5.2"
picky-asn1-x509 = "0.12" #TODO: consider upgrade to 0.14.5
qrcode = "0.14.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["native-tls-vendored", "json"] }
sea-orm = { version = "1.1.14", features = ["sqlx-sqlite", "runtime-tokio", "with-chrono"] }
serde = "1.0.219"
serde_json = "1.0.142"
simple_logger = "5.0.0"
simplelog = "0.12.2"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
syslog = "7.0.0"
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "process"] }
tokio-native-tls = { version = "0.3.1", features = ["vendored"] }
totp-rs = { version = "5.7.0", features = ["gen_secret"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-deflate", "compression-gzip", "decompression-deflate", "decompression-gzip"] }
tower-service = "0.3.3"
tss-esapi = "7.6.0"
uuid = { version = "1.17.0", features = ["v8"] }
zeroize = "1.8.1"

[[bin]]
path = "src/bin/paranoid-boot.rs"
name = "paranoid-boot"

[[bin]]
path = "src/bin/paranoid-srv.rs"
name = "paranoid-srv"

[[bin]]
path = "src/bin/paranoid-rt.rs"
name = "paranoid-rt"

[profile.release]
codegen-units = 1
# strip = "symbols"
